[package]
name = "async-pool-benchmark"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
deadpool_08 = { package = "deadpool", version = "0.8", features = ['managed'] }
deadpool_09 = { package = "deadpool", version = "0.9", features = ['managed'] }
bb8_07 = { package = "bb8", version = "0.7" }
mobc_07 = { package = "mobc", version = "0.7" }

[profile.release]
debug = true
