[package]
name = "async-pool-benchmark"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
deadpool_0_7 = { package = "deadpool", version = "0.7", features = ['managed'] }
deadpool_0_8 = { package = "deadpool", version = "0.8", features = ['managed'] }
deadpool_0_9 = { package = "deadpool", version = "0.9", features = ['managed'] }
bb8_0_7 = { package = "bb8", version = "0.7" }
bb8_0_8 = { package = "bb8", version = "0.8" }
mobc_0_7 = { package = "mobc", version = "0.7" }
qp_0_2 = { package = "qp", version = "0.2" }
plotters = { version = "0.3.1", features = ["svg_backend"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
abort-on-drop = "0.2.1"
async-object-pool = "0.1.4"

[profile.release]
debug = true
