[tool.poetry]
name = "async-pool-benchmark"
version = "0.1.0"
description = ""
authors = ["Michael P. Jung <michael.jung@terreon.de>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
